<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">myLock Auto Unlock</string>

<string name="enabled">myLock is enabled</string>
<string name="disabled">myLock is disabled</string>

<string name="guard_on">Lockscreen shown on slider wake</string>
<string name="guard_off">Always Auto Unlock</string>

<string name="auto_on">Always Auto Unlock</string>
<string name="auto_off">Auto unlock ONLY on slider wake</string>

<string name="fg_on">Notification will be displayed</string>
<string name="fg_off">Ongoing notification is disabled</string>

<string name="sec_on">ENABLED- The set pattern will be disabled while myLock is active</string>
<string name="sec_off">DISABLED- Set up a security pattern from system prefs</string>

<string name="basictitle">Auto Unlock</string>
<string name="basicsummary">You may see the lockscreen visuals when a slower app is restoring.</string>
<string name="hiddentitle">Hide lockscreen visuals</string>
<string name="hiddensummary">When a slower app is restoring, a progress message will be displayed.</string>
<string name="unguardtitle">Advanced</string>
<string name="unguardsummary">All keys wake- double press any key to unlock</string>

<string name="howto_title">How to use myLock</string>
<string name="HowToFull">myLock automatically minimizes the lockscreen. By default, the side buttons remain locked down, but waking the phone with the slider, keypad buttons, or power key will auto unlock. Advanced mode enables all keys to wake and any double press to unlock.
If the phone reboots while myLock is running, it will start back up automatically with your preferred settings. Do not attempt to change the security pattern or create one while myLock is enabled. Always uncheck enabled first. </string>

<string name="ts_title">Problem Help</string>
<string name="Troubleshooting">Please see our faq and troubleshooting pages linked on our site (http://mylockandroid.blogspot.com) first. If you notice an issue that happens consistently, download Log Collector (free from the market) to email us at myLockandroid@gmail.com. Be sure to list the problem symptoms and what other services are running in the Settings->Applications->Running Services screen. I will research the cause of the trouble and code a fix when possible.</string>

<string name="permlab_toggle">myLock plug-in permission</string>
<string name="permdesc_toggle">Allows plug-ins to toggle myLock</string>

<string name="userlabel">myLock auto unlock</string>

</resources>
