<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<CheckBoxPreference android:key="enabled" android:title="Service Status"
android:summaryOn="@string/enabled" android:summaryOff="@string/disabled"
android:disableDependentsState="false"
 android:persistent="true"
 android:widgetLayout="@layout/preftogglebutton"
/>
<!-- android:widgetLayout="@layout/preftogglebutton" -->
<CheckBoxPreference android:key="security" android:title="Security Status"
android:summaryOn="@string/sec_on" android:summaryOff="@string/sec_off"></CheckBoxPreference>
<PreferenceCategory android:key="category" android:dependency="enabled" android:title="Disable dependents"
android:summary="Mode and security settings">
<Preference android:key="mode" android:layout="@layout/modeselect"/>
</PreferenceCategory>
<CheckBoxPreference android:key="slideGuard" android:title="guard slider"
	android:persistent="true" android:summaryOn="@string/guard_on" android:summaryOff="@string/guard_off"/>
<CheckBoxPreference android:key="FG" android:title="Status Icon"
	android:persistent="true" android:summaryOn="@string/fg_on" android:summaryOff="@string/fg_off"/>

        <i4nc4mp.myLock.MainDialogPreference
                android:key="about" android:title="@string/howto_title" android:src="@drawable/icon"
                android:dialogTitle="@string/howto_title" android:dialogMessage="@string/HowToFull"
                android:dialogIcon="@drawable/icon" android:negativeButtonText="@null" />
        <i4nc4mp.myLock.MainDialogPreference
                android:key="problem" android:title="@string/ts_title" android:src="@drawable/icon"
                android:dialogTitle="@string/ts_title" android:dialogMessage="@string/Troubleshooting"
                android:dialogIcon="@drawable/icon" android:negativeButtonText="@null" />
</PreferenceScreen>